<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dip"
            android:layout_marginRight="25dip"
            android:layout_marginTop="25dip"
            android:text="@string/pain_au_chocolat"
            android:textStyle="bold"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="25dip"
            android:layout_marginTop="25dip"
            android:layout_marginRight="25dip">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />

            <RatingBar
                android:id="@+id/rating_bar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="right"
                android:rating="3.5" />
        </RelativeLayout>


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dip"
            android:layout_marginTop="5dip"
            android:layout_marginRight="25dip"
            android:text="@string/une_viennoiserie_au_beurre_et_au_chocolat"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button9"
                android:layout_width="100sp"
                android:layout_height="50sp"
                android:src="@drawable/internet"
                android:layout_marginRight="10dip"/>

            <ToggleButton
                android:id="@+id/button90"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/bought"
                android:textOn="@string/tobuy"
                android:layout_marginLeft="10dip"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>